# ResumeOptimizer

./: README.md  pyproject.toml
api/: auth.py  main.py  pyproject.toml
api/database/: model.py
